test/resources/inspections/latex/filenotfound/subfilestest/subdir/subsubdir/twodown.tex
% Path to main file should be relative to this file
\documentclass[<error descr="File 'main.tex' not found">main.tex</error>]{<error descr="File 'subfiles.cls' not found">subfiles</error>}

\begin{document}
    subfile
\end{document}